<resources>
    <string name="app_name">A-01-MAD</string>
    <string name="action_settings">Settings</string>
    <string name="selected">selected</string>
    <string name="end_date">End date: </string>
    <string name="select_task_type">Select Task Type:</string>
    <string name="add_task">Add Task:</string>
    <string name="delete_all_data">SWIPE TO DELETE</string>
    <string name="enter_new_task">Enter New Task</string>
    <string name="select_date">Due in:</string>
    <string name="enter_task_name">Please enter a task name</string>
    <string name="enter_team_member">Please enter at least one team member</string>
    <string name="add_team_member">Add Team Member:</string>
    <string name="userpicture">userPicture</string>
    <string name="task_title">Task:</string>
    <string name="add_person">Add Person</string>
    <string name="delete_data_blurb">Delete all Task, Subtask, and Users Data</string>
    <string name="add_new_person">Add New Person</string>
    <string name="delete_data_conf">Are You Sure You Want To Delete All Data?</string>
    <string name="member_name">Enter Member Name</string>
    <string name="deleteicon">deleteIcon</string>
    <string name="delete_all_data_text">Delete All Data</string>
    <string name="create_task">Create Task</string>
    <string name="button_done">Done</string>
    <string name="person_search_hint">Enter Name</string>
    <string name="person_search_select">Please select a person</string>
    <string name="person_search_create">Create</string>
    <string name="weight_view">Weight:</string>
    <string name="add_subtask">Add Sub-Task</string>
    <string name="subtask_name_hint">Name</string>
    <string name="subtask_empty">Please fill out the previous subtask</string>
    <string name="enter_datetime">Please enter the due time</string>
    <string name="next">Next</string>
    <string name="no_tasks">Start by creating a task with the button on the bottom-right of the screen</string>
    <string name="title_activity_test">ActivityTest</string>
    <string name="person_already_added">That person was already added</string>
    <string name="priority">Priority</string>
    <string name="assigned_people">Assigned People:</string>
    <string name="task_header">Task</string>
    <string name="help_collon">Help:</string>
    <string name="subtask_name_view">Subtask:</string>
    <string name="website_help">Website help</string>
    <string name="about_text">About:</string>
    <string name="app_info">Version: 1\nDevelopers: Gabriel Gurgel, Michael Gordon, Duncan Snider, Amy Dayasundara, Paul Smith\n</string>
</resources>
