<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/delete_data_blurb"
        android:textSize="16sp"
        android:layout_marginTop="464dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="454dp"
        android:layout_marginRight="10dp"
        android:text="@string/delete_all_data_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeDeleteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/deleteDataButton"
        tools:layout_editor_absoluteX="-35dp">

        <TextView
            android:id="@+id/delete_data_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/delete_data_conf" />

        <com.github.mpagconestoga.mad_a01.SwipeButton
            android:id="@+id/swipeButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>