<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subtask_name"
        android:layout_width="349dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/subtask_name_hint"
        android:inputType="text"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/subtask_name_view"
        android:textSize="10pt"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
 />
    <TextView
        android:id="@+id/weight_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/priority"
        android:gravity="center_vertical"

        android:textSize="10pt"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtask_name" />

    <TextView
        android:id="@+id/subtask_weight"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/weight_view"
        app:layout_constraintTop_toTopOf="@+id/weight_view" />

    <Button
        android:id="@+id/subtask_delete_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@android:drawable/ic_delete"
        android:onClick="onDelete"
        android:text=""
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="8dp"                                                                                                         />

</androidx.constraintlayout.widget.ConstraintLayout>